--- a/_includes/google_analytics.html
+++ b/_includes/google_analytics.html
@@ -1,4 +1,13 @@
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3TPQXZ0XT5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() {dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-3TPQXZ0XT5');
+</script>
+<!-- Google tag (analytics.js) -->
 <script>
   (function (i, s, o, g, r, a, m) {
     i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
@@ -9,5 +18,4 @@
 
   ga('create', 'UA-69046371-1', 'auto');
   ga('send', 'pageview');
-
 </script>
